--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,7 @@
     <title>dom-decorators | example</title>
   </head>
   <body>
+    <button id="btn">click</button>
     <script src="./example.ts"></script>
   </body>
 </html>
