finished EventListener dec

--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,13 @@
     <title>dom-decorators | example</title>
   </head>
   <body>
-    <button id="btn">click</button>
+    <button id="btn">button</button>
+    <ul id="list">
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+    </ul>
     <script src="./example.ts"></script>
   </body>
 </html>
